--- a/css/style.production.css
+++ b/css/style.production.css
@@ -27,7 +27,7 @@ font-family: 'Bangers', 'cursive';
 }
 
 body {
-    background-image: url(img/marble.jpeg);
+    background-image: url(https://fratzio.github.io/A1_project/img/marble.jpeg);
     background-size: cover; 
     background-color: #DCDCDC;
     font-family: 'Bangers', 'cursive';
