--- a/css/styles.css
+++ b/css/styles.css
@@ -20,307 +20,310 @@ font-family: 'Bangers', 'cursive';
 */
 
 :root {
-    --primary-color: #FFE4B5;
-    --secondary-color: #E9967A;
-    --sienna: #A0522D;
-    --dark-red: #8B0000;
-    --fuscia: #FF00FF;
-    --orange: #FFA500;
-    --dark-olive-green: #556B2F;
-    --dark-salmon: #E9967A;
-    --gainsboro: #DCDCDC;
-    --lavender-blush: #FFF0F5;
-    --light-pink: #FFB6C1;
-    --light-salmon: #FFA07A;
-    --saddle-brown:#8B4513;
-    --peru:#CD853F;
-    --white: #fff;
-    --black: #000;
-    --font-size-default: 16px;
-    --max-width-full-size: 700px;
-    --max-width-viewport-size: 328px;
-    --font-weight-headers: 700;
-    --margin-default: 0 auto;
+  --primary-color: #ffe4b5;
+  --secondary-color: #e9967a;
+  --sienna: #a0522d;
+  --dark-red: #8b0000;
+  --fuscia: #ff00ff;
+  --orange: #ffa500;
+  --dark-olive-green: #556b2f;
+  --dark-salmon: #e9967a;
+  --gainsboro: #dcdcdc;
+  --lavender-blush: #fff0f5;
+  --light-pink: #ffb6c1;
+  --light-salmon: #ffa07a;
+  --saddle-brown: #8b4513;
+  --peru: #cd853f;
+  --white: #fff;
+  --black: #000;
+  --font-size-default: 16px;
+  --max-width-full-size: 700px;
+  --max-width-viewport-size: 328px;
+  --font-weight-headers: 700;
+  --margin-default: 0 auto;
 }
 
 * {
-    box-sizing: border-box;    
+  box-sizing: border-box;
 }
 
 body {
-    background-image: url(../img/marble.jpeg);
-    background-size: cover; 
-    background-color: var(--gainsboro);
-    font-family: 'Bangers', 'cursive';
-    font-size: var(--font-size-default);
-    font-weight: 150;
-    line-height: 1.6;
-    text-shadow: .5px .5px var(--white);
+  background-image: url(../img/marble.jpeg);
+  background-size: cover;
+  background-color: var(--gainsboro);
+  font-family: 'Bangers', 'cursive';
+  font-size: var(--font-size-default);
+  font-weight: 150;
+  line-height: 1.6;
+  text-shadow: 0.5px 0.5px var(--white);
 }
 
 img {
-    height: auto;
-    width: 100%;
-    display: block;
-    vertical-align: middle;
+  height: auto;
+  width: 100%;
+  display: block;
 }
 
 .page-header {
-    box-shadow: 0 .5px 0 0 var(--white);
-    display: flex;
-    flex-wrap: nowrap;
-    margin: var(--margin-default);
-    padding: 20px;
-    border-bottom: .5px inset var(--black);
-    width: 100%;
+  box-shadow: 0 0.5px 0 0 var(--white);
+  display: flex;
+  flex-wrap: nowrap;
+  margin: var(--margin-default);
+  padding: 20px;
+  border-bottom: 0.5px inset var(--black);
+  width: 100%;
 }
 
 .page-header__item {
-    flex: 0 1 200px;
-    margin: var(--margin-default);
+  flex: 0 1 200px;
+  margin: var(--margin-default);
 }
 
 .page-header__item:last-child {
-    flex-grow: 1;
-    text-align: right;
+  flex-grow: 1;
+  text-align: right;
 }
 
 .navigation-list {
-    list-style-type: none;
-    white-space: nowrap;
-    display: flex;
-    justify-content: flex-end;
+  list-style-type: none;
+  white-space: nowrap;
+  display: flex;
+  justify-content: flex-end;
 }
 
 .navigation-list__item {
-    font-size: 25px;
+  font-size: 25px;
 }
 
 .navigation-list li {
-    display: inline-block;
-    margin-left: 15px;
+  display: inline-block;
+  margin-left: 15px;
 }
 
 .navigation-list__item--active {
-    text-decoration: none;
+  text-decoration: none;
 }
 
-
-.profile, 
-.about-body, 
+.profile,
+.about-body,
 .contact-body,
 #contact-form-container {
-    max-width: var(--max-width-full-size);
-    margin: var(--margin-default);
+  max-width: var(--max-width-full-size);
+  margin: var(--margin-default);
+}
+
+.work-body {
+  margin-left: 10px;
+  margin-right: 10px;
 }
 
 .body-img-mel {
-    margin: var(--margin-default);
-    display: border;
-    text-align: center;
-    max-width: var(--max-width-full-size);
+  margin: var(--margin-default);
+  display: border;
+  text-align: center;
+  max-width: var(--max-width-full-size);
 }
 
 .img-mel {
-    max-width: var(--max-width-full-size);
-    height: auto;
+  max-width: var(--max-width-full-size);
+  height: auto;
 }
 
 .page-footer {
-    clear: both;
-    display: flex;
-    flex-direction: column;
+  clear: both;
+  display: flex;
+  flex-direction: column;
 }
 
 .page-footer__item {
-    flex: 0 1 20px;
+  flex: 0 1 20px;
 }
 
 .page-footer__item:first-child {
-    text-align: center;
+  text-align: center;
 }
 
 .social-container {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
 
 .social-container__item {
-    position: relative;
-    flex: 0 1 50px;
-    text-align: center;
+  position: relative;
+  flex: 0 1 50px;
+  text-align: center;
 }
 
 .profile__portrait {
-    float: left;
-    height: auto;
-    width: 250px;
-    margin-right: 40px;
-    border-radius: 50%;
-    box-shadow: 2px 2px 2px 2px var(--black);
+  float: left;
+  height: auto;
+  width: 250px;
+  margin-right: 40px;
+  border-radius: 50%;
+  box-shadow: 2px 2px 2px 2px var(--black);
 }
 
 .profile_logo {
-    width: 70px;
-    height: 75px;
+  width: 70px;
+  height: 75px;
 }
 
 h1 {
-    font-size: 30px;
-    font-weight: var(--font-weight-headers);
-    line-height: 1.6;
+  font-size: 30px;
+  font-weight: var(--font-weight-headers);
+  line-height: 1.6;
 }
 
 h2 {
-    font-size: 24px;
-    font-weight: var(--font-weight-headers);
-    line-height: 1.2;
+  font-size: 24px;
+  font-weight: var(--font-weight-headers);
+  line-height: 1.2;
 }
 
 h3 {
-    font-size: 18px;
-    font-weight: var(--font-weight-headers);
-    line-height: 1;
+  font-size: 18px;
+  font-weight: var(--font-weight-headers);
+  line-height: 1;
 }
 
 p {
-    font-size: var(--font-size-default);
-    line-height: 1.4;
+  font-size: var(--font-size-default);
+  line-height: 1.4;
 }
 
 a {
-    color: var(--saddle-brown);
+  color: var(--saddle-brown);
 }
 
-a:hover, a:focus {
-    text-decoration: none;
-    color: var(--peru);
+a:hover,
+a:focus {
+  text-decoration: none;
+  color: var(--peru);
 }
 
 a:active {
-    color: var(--orange);
+  color: var(--orange);
 }
 
-button, .button {
-    border: none;
-    font-family: inherit;
-    background-color: var(--white);
-    color: var(--saddle-brown);
-    text-decoration: none;
-    padding: 10px;
-    border-radius: 3px;
-    border-bottom: 2px solid var(--black);
-    transition: 0.2s opacity;
+button,
+.button {
+  border: none;
+  font-family: inherit;
+  background-color: var(--white);
+  color: var(--saddle-brown);
+  text-decoration: none;
+  padding: 10px;
+  border-radius: 3px;
+  border-bottom: 2px solid var(--black);
+  transition: 0.2s opacity;
 }
 
-button:hover, 
+button:hover,
 button:focus,
 .button:hover,
 .button:focus {
-    cursor: pointer;
-    opacity: 0.8;
+  cursor: pointer;
+  opacity: 0.8;
 }
 
 /* Grid fallback */
 
 .grid__item {
-    display: inline-block;
-    width: 33%,
+  display: inline-block;
+  width: 33%;
 }
 
 /* Styling CSS grid */
 
 .grid {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-gap: 20px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 20px;
 }
 
 .grid__item {
-    background-color: var(--white);
-    padding: 10px;
-    width: auto;
-    color: var(--black);
-    opacity: 0.6;
+  background-color: var(--white);
+  padding: 10px;
+  width: auto;
+  color: var(--black);
+  opacity: 0.6;
 }
 
 .grid__item:last-child {
-    grid-column: 3 / 3;
-    grid-row: 1 / 3;
+  grid-column: 3 / 3;
+  grid-row: 1 / 3;
 }
 
 .grid__item:hover {
-       border: 1px solid;
-       padding: 10px;
-       box-shadow: 2px 2px var(--black);
-       transition-duration: 0.1s;
-       opacity: .8;
-     }
+  border: 1px solid;
+  padding: 10px;
+  box-shadow: 2px 2px var(--black);
+  transition-duration: 0.1s;
+  opacity: 0.8;
+}
 
 thead {
-    text-align: left;
+  text-align: left;
 }
 
 /* SVG file */
 
-
 .st2 {
-    animation: 20s cloud-move infinite alternate linear;
+  animation: 20s cloud-move infinite alternate linear;
 }
 
 .st6 {
-    animation: 2s color-change-2 infinite alternate linear;
+  animation: 2s color-change-2 infinite alternate linear;
 }
 
 .st4 {
-    animation: 20s color-change-3 infinite alternate linear;
+  animation: 20s color-change-3 infinite alternate linear;
 }
-
 
 /* Key frame Animations */
 
 /* Sun changing color */
 
 @keyframes color-change {
-    from {
-        fill: var(--primary-color);
-    }
-    to {
-        fill: var(--secondary-color);
-    }
+  from {
+    fill: var(--primary-color);
+  }
+  to {
+    fill: var(--secondary-color);
+  }
 }
 
 @keyframes color-change-2 {
-    0% {
-        fill: var(--lavender-blush);
-    }
-    50% {
-        fill: var(--light-pink);
-    }
-    100% {
-        fill: var(--light-salmon);
-    }
+  0% {
+    fill: var(--lavender-blush);
+  }
+  50% {
+    fill: var(--light-pink);
+  }
+  100% {
+    fill: var(--light-salmon);
+  }
 }
 
 /* Cloud moving */
 
-@keyframes  cloud-move {
-    from {
-        transform: translate(0, 50px);
-    }
-    to {
-        transform: translate(200px, 50px);
-    }
+@keyframes cloud-move {
+  from {
+    transform: translate(0, 50px);
+  }
+  to {
+    transform: translate(200px, 50px);
+  }
 }
 
-@keyframes  cloud-move-reverse {
-    from {
-        transform: translate(450, 50px);
-    }
-    to {
-        transform: translate(100px, 50px);
-    }
+@keyframes cloud-move-reverse {
+  from {
+    transform: translate(450, 50px);
+  }
+  to {
+    transform: translate(100px, 50px);
+  }
 }
 
 /* Media styling goes at the very end of CSS file */
@@ -330,81 +333,79 @@ thead {
     Other possible values include screen, print, and speech (the value all encompasses all of these).
  */
 
-
 @media all and (min-width: 500px) and (max-width: 750px) {
-    .grid {
-        grid-template-columns: 1fr 1fr;
-    }
+  .grid {
+    grid-template-columns: 1fr 1fr;
+  }
 }
 
 @media all and (max-width: 750px) {
-    .grid {
-        grid-gap: 10px;
-    }
-    .grid__item:last-child {
-        grid-column: auto / auto;
-        grid-row: auto / auto;
-    }
-    h1 {
-        font-size: 22px;
-    }
-    h2 {
-        font-size: var(--font-size-default);
-    }
-    h3 {
+  .grid {
+    grid-gap: 10px;
+  }
+  .grid__item:last-child {
+    grid-column: auto / auto;
+    grid-row: auto / auto;
+  }
+  h1 {
+    font-size: 22px;
+  }
+  h2 {
+    font-size: var(--font-size-default);
+  }
+  h3 {
     font-size: 12px;
-    }
-    .navigation-list a  {
-        font-size: 22px;
-    }
-    .profile, 
-    .about-body, 
-    .contact-body,
-    #contact-form-container {
+  }
+  .navigation-list a {
+    font-size: 22px;
+  }
+  .profile,
+  .about-body,
+  .contact-body,
+  #contact-form-container {
     margin-left: 5px;
     margin-right: 5px;
-    }
+  }
 }
 
 @media all and (max-width: 500px) {
-    .grid {
-        grid-template-columns: 1fr;
-    }
-    .navigation-list a  {
-        font-size: 18px;
-    }
+  .grid {
+    grid-template-columns: 1fr;
+  }
+  .navigation-list a {
+    font-size: 18px;
+  }
 }
 
 @media all and (max-width: 550px) {
-    .navigation-list a  {
-        font-size: var(--font-size-default);
-    }
-    .navigation-list li {
-        margin-left: 5px;
-    }
-    .navigation-list {
+  .navigation-list a {
+    font-size: var(--font-size-default);
+  }
+  .navigation-list li {
+    margin-left: 5px;
+  }
+  .navigation-list {
     justify-content: flex-start;
-    }
+  }
 }
 
 @media all and (min-width: 322px) and (max-width: 349px) {
-    .profile__portrait {
+  .profile__portrait {
     float: unset;
-    }
+  }
 }
 
 @media all and (max-width: 328px) {
-.img-mel {
+  .img-mel {
     max-width: 100%;
     height: auto;
-    }
-.profile, 
-.about-body, 
-.contact-body,
-#contact-form-container {
+  }
+  .profile,
+  .about-body,
+  .contact-body,
+  #contact-form-container {
     max-width: var(--max-width-viewport-size);
     margin-left: 5px;
     margin-right: 5px;
-    }
+  }
 }
-
