--- a/css/style.production.css
+++ b/css/style.production.css
@@ -1,4 +1,9 @@
-/* prefixed by https://autoprefixer.github.io (PostCSS: v7.0.26, autoprefixer: v9.7.3) */
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v7.0.29,
+* Autoprefixer: v9.7.6
+* Browsers: last 4 version
+*/
 
 /*
 Colours used:
@@ -22,506 +27,500 @@ font-family: 'Bangers', 'cursive';
 */
 
 * {
-    -webkit-box-sizing: border-box;
-            box-sizing: border-box;    
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
-    background-image: url(../img/marble.jpeg);
-    background-size: cover; 
-    background-color: #DCDCDC;
-    font-family: 'Bangers', 'cursive';
-    font-size: 16px;
-    font-weight: 150;
-    line-height: 1.6;
-    text-shadow: .5px .5px #fff;
+  background-image: url(../img/marble.jpeg);
+  background-size: cover;
+  background-color: #dcdcdc;
+  font-family: 'Bangers', 'cursive';
+  font-size: 16px;
+  font-weight: 150;
+  line-height: 1.6;
+  text-shadow: 0.5px 0.5px #fff;
 }
 
 img {
-    height: auto;
-    width: 100%;
-    display: block;
-    vertical-align: middle;
+  height: auto;
+  width: 100%;
+  display: block;
 }
 
 .page-header {
-    -webkit-box-shadow: 0 .5px 0 0 #fff;
-            box-shadow: 0 .5px 0 0 #fff;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: nowrap;
-        flex-wrap: nowrap;
-    margin: 0 auto;
-    padding: 20px;
-    border-bottom: .5px inset #000;
-    width: 100%;
+  -webkit-box-shadow: 0 0.5px 0 0 #fff;
+  box-shadow: 0 0.5px 0 0 #fff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: nowrap;
+  flex-wrap: nowrap;
+  margin: 0 auto;
+  padding: 20px;
+  border-bottom: 0.5px inset #000;
+  width: 100%;
 }
 
 .page-header__item {
-    -webkit-box-flex: 0;
-        -ms-flex: 0 1 200px;
-            flex: 0 1 200px;
-    margin: 0 auto;
+  -webkit-box-flex: 0;
+  -ms-flex: 0 1 200px;
+  flex: 0 1 200px;
+  margin: 0 auto;
 }
 
 .page-header__item:last-child {
-    -webkit-box-flex: 1;
-        -ms-flex-positive: 1;
-            flex-grow: 1;
-    text-align: right;
+  -webkit-box-flex: 1;
+  -ms-flex-positive: 1;
+  flex-grow: 1;
+  text-align: right;
 }
 
 .navigation-list {
-    list-style-type: none;
-    white-space: nowrap;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: end;
-        -ms-flex-pack: end;
-            justify-content: flex-end;
+  list-style-type: none;
+  white-space: nowrap;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+  -ms-flex-pack: end;
+  justify-content: flex-end;
 }
 
 .navigation-list__item {
-    font-size: 25px;
+  font-size: 25px;
 }
 
 .navigation-list li {
-    display: inline-block;
-    margin-left: 15px;
+  display: inline-block;
+  margin-left: 15px;
 }
 
 .navigation-list__item--active {
-    text-decoration: none;
+  text-decoration: none;
 }
-
 
 .profile {
-    max-width: 700px;
-    margin: 0 auto;
+  max-width: 700px;
+  margin: 0 auto;
 }
-
 
 .about-body {
-    max-width: 700px;
-    margin: 0 auto;
+  max-width: 700px;
+  margin: 0 auto;
 }
-
 
 .contact-body {
-    max-width: 700px;
-    margin: 0 auto;
+  max-width: 700px;
+  margin: 0 auto;
 }
 
-
 #contact-form-container {
-    max-width: 700px;
-    margin: 0 auto;
+  max-width: 700px;
+  margin: 0 auto;
+}
+
+.work-body {
+  margin-left: 10px;
+  margin-right: 10px;
 }
 
 .body-img-mel {
-    margin: 0 auto;
-    display: border;
-    text-align: center;
-    max-width: 700px;
+  margin: 0 auto;
+  display: border;
+  text-align: center;
+  max-width: 700px;
 }
 
 .img-mel {
-    max-width: 700px;
-    height: auto;
+  max-width: 700px;
+  height: auto;
 }
 
 .page-footer {
-    clear: both;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+  clear: both;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
 }
 
 .page-footer__item {
-    -webkit-box-flex: 0;
-        -ms-flex: 0 1 20px;
-            flex: 0 1 20px;
+  -webkit-box-flex: 0;
+  -ms-flex: 0 1 20px;
+  flex: 0 1 20px;
 }
 
 .page-footer__item:first-child {
-    text-align: center;
+  text-align: center;
 }
 
 .social-container {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
 }
 
 .social-container__item {
-    position: relative;
-    -webkit-box-flex: 0;
-        -ms-flex: 0 1 50px;
-            flex: 0 1 50px;
-    text-align: center;
+  position: relative;
+  -webkit-box-flex: 0;
+  -ms-flex: 0 1 50px;
+  flex: 0 1 50px;
+  text-align: center;
 }
 
 .profile__portrait {
-    float: left;
-    height: auto;
-    width: 250px;
-    margin-right: 40px;
-    border-radius: 50%;
-    -webkit-box-shadow: 2px 2px 2px 2px #000;
-            box-shadow: 2px 2px 2px 2px #000;
+  float: left;
+  height: auto;
+  width: 250px;
+  margin-right: 40px;
+  border-radius: 50%;
+  -webkit-box-shadow: 2px 2px 2px 2px #000;
+  box-shadow: 2px 2px 2px 2px #000;
 }
 
 .profile_logo {
-    width: 70px;
-    height: 75px;
+  width: 70px;
+  height: 75px;
 }
 
 h1 {
-    font-size: 30px;
-    font-weight: 700;
-    line-height: 1.6;
+  font-size: 30px;
+  font-weight: 700;
+  line-height: 1.6;
 }
 
 h2 {
-    font-size: 24px;
-    font-weight: 700;
-    line-height: 1.2;
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 1.2;
 }
 
 h3 {
-    font-size: 18px;
-    font-weight: 700;
-    line-height: 1;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 1;
 }
 
 p {
-    font-size: 16px;
-    line-height: 1.4;
+  font-size: 16px;
+  line-height: 1.4;
 }
 
 a {
-    color: #8B4513;
+  color: #8b4513;
 }
 
 a:hover {
-    text-decoration: none;
-    color: #CD853F;
+  text-decoration: none;
+  color: #cd853f;
 }
 
 a:focus {
-    text-decoration: none;
-    color: #CD853F;
+  text-decoration: none;
+  color: #cd853f;
 }
 
 a:active {
-    color: #FFA500;
+  color: #ffa500;
 }
 
 button {
-    border: none;
-    font-family: inherit;
-    background-color: #fff;
-    color: #8B4513;
-    text-decoration: none;
-    padding: 10px;
-    border-radius: 3px;
-    border-bottom: 2px solid #000;
-    -webkit-transition: 0.2s opacity;
-    -o-transition: 0.2s opacity;
-    transition: 0.2s opacity;
+  border: none;
+  font-family: inherit;
+  background-color: #fff;
+  color: #8b4513;
+  text-decoration: none;
+  padding: 10px;
+  border-radius: 3px;
+  border-bottom: 2px solid #000;
+  -webkit-transition: 0.2s opacity;
+  -o-transition: 0.2s opacity;
+  transition: 0.2s opacity;
 }
 
 .button {
-    border: none;
-    font-family: inherit;
-    background-color: #fff;
-    color: #8B4513;
-    text-decoration: none;
-    padding: 10px;
-    border-radius: 3px;
-    border-bottom: 2px solid #000;
-    -webkit-transition: 0.2s opacity;
-    -o-transition: 0.2s opacity;
-    transition: 0.2s opacity;
+  border: none;
+  font-family: inherit;
+  background-color: #fff;
+  color: #8b4513;
+  text-decoration: none;
+  padding: 10px;
+  border-radius: 3px;
+  border-bottom: 2px solid #000;
+  -webkit-transition: 0.2s opacity;
+  -o-transition: 0.2s opacity;
+  transition: 0.2s opacity;
 }
 
-button:hover, 
+button:hover,
 button:focus,
 .button:hover,
 .button:focus {
-    cursor: pointer;
-    opacity: 0.8;
+  cursor: pointer;
+  opacity: 0.8;
 }
 
 /* Grid fallback */
 
-.grid__item {
-    display: inline-block;
-    width: 33%,
-}
-
 /* Styling CSS grid */
 
 .grid {
-    display: -ms-grid;
-    display: grid;
-    -ms-grid-columns: 1fr 20px 1fr 20px 1fr;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-gap: 20px;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 20px 1fr 20px 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 20px;
 }
 
 .grid__item {
-    background-color: #fff;
-    padding: 10px;
-    width: auto;
-    color: #000;
-    opacity: 0.6;
+  display: inline-block;
+  width: 33%;
+  background: #fff;
+  padding: 10px;
+  width: auto;
+  color: #000;
+  opacity: 0.6;
 }
 
 .grid__item:last-child {
-    -ms-grid-column: 3;
-    grid-column: 3 / 3;
-    -ms-grid-row: 1;
-    -ms-grid-row-span: 2;
-    grid-row: 1 / 3;
+  -ms-grid-column: 3;
+  grid-column: 3 / 3;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 2;
+  grid-row: 1 / 3;
 }
 
 .grid__item:hover {
-       border: 1px solid;
-       padding: 10px;
-       -webkit-box-shadow: 2px 2px #000;
-               box-shadow: 2px 2px #000;
-       -webkit-transition-duration: 0.1s;
-            -o-transition-duration: 0.1s;
-               transition-duration: 0.1s;
-       opacity: .8;
-     }
+  border: 1px solid;
+  padding: 10px;
+  -webkit-box-shadow: 2px 2px #000;
+  box-shadow: 2px 2px #000;
+  -webkit-transition-duration: 0.1s;
+  -o-transition-duration: 0.1s;
+  transition-duration: 0.1s;
+  opacity: 0.8;
+}
 
 thead {
-    text-align: left;
+  text-align: left;
 }
 
 /* SVG file */
 
-
 .st2 {
-    -webkit-animation: 20s cloud-move infinite alternate linear;
-            animation: 20s cloud-move infinite alternate linear;
+  -webkit-animation: 20s cloud-move infinite alternate linear;
+  animation: 20s cloud-move infinite alternate linear;
 }
 
 .st6 {
-    -webkit-animation: 2s color-change-2 infinite alternate linear;
-            animation: 2s color-change-2 infinite alternate linear;
+  -webkit-animation: 2s color-change-2 infinite alternate linear;
+  animation: 2s color-change-2 infinite alternate linear;
 }
 
 .st4 {
-    -webkit-animation: 20s color-change-3 infinite alternate linear;
-            animation: 20s color-change-3 infinite alternate linear;
+  -webkit-animation: 20s color-change-3 infinite alternate linear;
+  animation: 20s color-change-3 infinite alternate linear;
 }
-
 
 /* Key frame Animations */
 
 /* Sun changing color */
 
 @-webkit-keyframes color-change {
-    from {
-        fill: #FFE4B5;
-    }
-    to {
-        fill: #E9967A;
-    }
+  from {
+    fill: #ffe4b5;
+  }
+  to {
+    fill: #e9967a;
+  }
 }
 
 @keyframes color-change {
-    from {
-        fill: #FFE4B5;
-    }
-    to {
-        fill: #E9967A;
-    }
+  from {
+    fill: #ffe4b5;
+  }
+  to {
+    fill: #e9967a;
+  }
 }
 
 @-webkit-keyframes color-change-2 {
-    0% {
-        fill: #FFF0F5;
-    }
-    50% {
-        fill: #FFB6C1;
-    }
-    100% {
-        fill: #FFA07A;
-    }
+  0% {
+    fill: #fff0f5;
+  }
+  50% {
+    fill: #ffb6c1;
+  }
+  100% {
+    fill: #ffa07a;
+  }
 }
 
 @keyframes color-change-2 {
-    0% {
-        fill: #FFF0F5;
-    }
-    50% {
-        fill: #FFB6C1;
-    }
-    100% {
-        fill: #FFA07A;
-    }
+  0% {
+    fill: #fff0f5;
+  }
+  50% {
+    fill: #ffb6c1;
+  }
+  100% {
+    fill: #ffa07a;
+  }
 }
 
 /* Cloud moving */
 
-@-webkit-keyframes  cloud-move {
-    from {
-        -webkit-transform: translate(0, 50px);
-                transform: translate(0, 50px);
-    }
-    to {
-        -webkit-transform: translate(200px, 50px);
-                transform: translate(200px, 50px);
-    }
+@-webkit-keyframes cloud-move {
+  from {
+    -webkit-transform: translate(0, 50px);
+    transform: translate(0, 50px);
+  }
+  to {
+    -webkit-transform: translate(200px, 50px);
+    transform: translate(200px, 50px);
+  }
 }
 
-@keyframes  cloud-move {
-    from {
-        -webkit-transform: translate(0, 50px);
-                transform: translate(0, 50px);
-    }
-    to {
-        -webkit-transform: translate(200px, 50px);
-                transform: translate(200px, 50px);
-    }
+@keyframes cloud-move {
+  from {
+    -webkit-transform: translate(0, 50px);
+    transform: translate(0, 50px);
+  }
+  to {
+    -webkit-transform: translate(200px, 50px);
+    transform: translate(200px, 50px);
+  }
 }
 
-@-webkit-keyframes  cloud-move-reverse {
-    from {
-        -webkit-transform: translate(450, 50px);
-                transform: translate(450, 50px);
-    }
-    to {
-        -webkit-transform: translate(100px, 50px);
-                transform: translate(100px, 50px);
-    }
+@-webkit-keyframes cloud-move-reverse {
+  from {
+    -webkit-transform: translate(450, 50px);
+    transform: translate(450, 50px);
+  }
+  to {
+    -webkit-transform: translate(100px, 50px);
+    transform: translate(100px, 50px);
+  }
 }
 
-@keyframes  cloud-move-reverse {
-    from {
-        -webkit-transform: translate(450, 50px);
-                transform: translate(450, 50px);
-    }
-    to {
-        -webkit-transform: translate(100px, 50px);
-                transform: translate(100px, 50px);
-    }
+@keyframes cloud-move-reverse {
+  from {
+    -webkit-transform: translate(450, 50px);
+    transform: translate(450, 50px);
+  }
+  to {
+    -webkit-transform: translate(100px, 50px);
+    transform: translate(100px, 50px);
+  }
 }
 
 /* Media styling goes at the very end of CSS file */
 
 /* Media query for displays smaller than 500px */
 /* "all" specifices to which media it should be applied
-    Other possible values include screen, print, and speech (the value all encompasses all of these).
- */
-
+      Other possible values include screen, print, and speech (the value all encompasses all of these).
+   */
 
 @media all and (min-width: 500px) and (max-width: 750px) {
-    .grid {
-        -ms-grid-columns: 1fr 20px 1fr;
-        grid-template-columns: 1fr 1fr;
-    }
+  .grid {
+    -ms-grid-columns: 1fr 20px 1fr;
+    grid-template-columns: 1fr 1fr;
+  }
 }
 
 @media all and (max-width: 750px) {
-    .grid {
-        grid-gap: 10px;
-    }
-    .grid__item:last-child {
-        grid-column: auto / auto;
-        grid-row: auto / auto;
-    }
-    h1 {
-        font-size: 22px;
-    }
-    h2 {
-        font-size: 16px;
-    }
-    h3 {
+  .grid {
+    grid-gap: 10px;
+  }
+  .grid__item:last-child {
+    grid-column: auto / auto;
+    grid-row: auto / auto;
+  }
+  h1 {
+    font-size: 22px;
+  }
+  h2 {
+    font-size: 16px;
+  }
+  h3 {
     font-size: 12px;
-    }
-    .navigation-list a  {
-        font-size: 22px;
-    }
-    .profile, 
-    .about-body, 
-    .contact-body,
-    #contact-form-container {
+  }
+  .navigation-list a {
+    font-size: 22px;
+  }
+  .profile,
+  .about-body,
+  .contact-body,
+  #contact-form-container {
     margin-left: 5px;
     margin-right: 5px;
-    }
+  }
 }
 
 @media all and (max-width: 500px) {
-    .grid {
-        -ms-grid-columns: 1fr;
-        grid-template-columns: 1fr;
-    }
-    .navigation-list a  {
-        font-size: 18px;
-    }
+  .grid {
+    -ms-grid-columns: 1fr;
+    grid-template-columns: 1fr;
+  }
+  .navigation-list a {
+    font-size: 18px;
+  }
 }
 
 @media all and (max-width: 550px) {
-    .navigation-list a  {
-        font-size: 16px;
-    }
-    .navigation-list li {
-        margin-left: 5px;
-    }
-    .navigation-list {
+  .navigation-list a {
+    font-size: 16px;
+  }
+  .navigation-list li {
+    margin-left: 5px;
+  }
+  .navigation-list {
     -webkit-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: flex-start;
-    }
+    -ms-flex-pack: start;
+    justify-content: flex-start;
+  }
 }
 
 @media all and (min-width: 322px) and (max-width: 349px) {
-    .profile__portrait {
+  .profile__portrait {
     float: unset;
-    }
+  }
 }
 
 @media all and (max-width: 328px) {
-.img-mel {
+  .img-mel {
     max-width: 100%;
     height: auto;
-    }
-.profile {
+  }
+  .profile {
     max-width: 328px;
     margin-left: 5px;
     margin-right: 5px;
-    }
-.about-body {
+  }
+  .about-body {
     max-width: 328px;
     margin-left: 5px;
     margin-right: 5px;
-    }
-.contact-body {
+  }
+  .contact-body {
     max-width: 328px;
     margin-left: 5px;
     margin-right: 5px;
-    }
-#contact-form-container {
+  }
+  #contact-form-container {
     max-width: 328px;
     margin-left: 5px;
     margin-right: 5px;
-    }
+  }
 }
