--- a/css/styles.css
+++ b/css/styles.css
@@ -229,11 +229,6 @@ button:focus,
 
 /* Grid fallback */
 
-.grid__item {
-  display: inline-block;
-  width: 33%;
-}
-
 /* Styling CSS grid */
 
 .grid {
@@ -243,7 +238,9 @@ button:focus,
 }
 
 .grid__item {
-  background-color: var(--white);
+  display: inline-block;
+  width: 33%;
+  background: var(--white);
   padding: 10px;
   width: auto;
   color: var(--black);
