--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,11 @@
 /*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v7.0.29,
+* Autoprefixer: v9.7.6
+* Browsers: last 4 version
+*/
+
+/*
 Colours used:
 
 Moccasin:#FFE4B5;
@@ -19,43 +26,20 @@ Fonts used:
 font-family: 'Bangers', 'cursive';
 */
 
-:root {
-  --primary-color: #ffe4b5;
-  --secondary-color: #e9967a;
-  --sienna: #a0522d;
-  --dark-red: #8b0000;
-  --fuscia: #ff00ff;
-  --orange: #ffa500;
-  --dark-olive-green: #556b2f;
-  --dark-salmon: #e9967a;
-  --gainsboro: #dcdcdc;
-  --lavender-blush: #fff0f5;
-  --light-pink: #ffb6c1;
-  --light-salmon: #ffa07a;
-  --saddle-brown: #8b4513;
-  --peru: #cd853f;
-  --white: #fff;
-  --black: #000;
-  --font-size-default: 16px;
-  --max-width-full-size: 700px;
-  --max-width-viewport-size: 328px;
-  --font-weight-headers: 700;
-  --margin-default: 0 auto;
-}
-
 * {
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
 
 body {
   background-image: url(../img/marble.jpeg);
   background-size: cover;
-  background-color: var(--gainsboro);
+  background-color: #dcdcdc;
   font-family: 'Bangers', 'cursive';
-  font-size: var(--font-size-default);
+  font-size: 16px;
   font-weight: 150;
   line-height: 1.6;
-  text-shadow: 0.5px 0.5px var(--white);
+  text-shadow: 0.5px 0.5px #fff;
 }
 
 img {
@@ -65,21 +49,29 @@ img {
 }
 
 .page-header {
-  box-shadow: 0 0.5px 0 0 var(--white);
+  -webkit-box-shadow: 0 0.5px 0 0 #fff;
+  box-shadow: 0 0.5px 0 0 #fff;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: nowrap;
   flex-wrap: nowrap;
-  margin: var(--margin-default);
+  margin: 0 auto;
   padding: 20px;
-  border-bottom: 0.5px inset var(--black);
+  border-bottom: 0.5px inset #000;
   width: 100%;
 }
 
 .page-header__item {
+  -webkit-box-flex: 0;
+  -ms-flex: 0 1 200px;
   flex: 0 1 200px;
-  margin: var(--margin-default);
+  margin: 0 auto;
 }
 
 .page-header__item:last-child {
+  -webkit-box-flex: 1;
+  -ms-flex-positive: 1;
   flex-grow: 1;
   text-align: right;
 }
@@ -87,7 +79,11 @@ img {
 .navigation-list {
   list-style-type: none;
   white-space: nowrap;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: end;
+  -ms-flex-pack: end;
   justify-content: flex-end;
 }
 
@@ -104,12 +100,24 @@ img {
   text-decoration: none;
 }
 
-.profile,
-.about-body,
-.contact-body,
+.profile {
+  max-width: 700px;
+  margin: 0 auto;
+}
+
+.about-body {
+  max-width: 700px;
+  margin: 0 auto;
+}
+
+.contact-body {
+  max-width: 700px;
+  margin: 0 auto;
+}
+
 #contact-form-container {
-  max-width: var(--max-width-full-size);
-  margin: var(--margin-default);
+  max-width: 700px;
+  margin: 0 auto;
 }
 
 .work-body {
@@ -118,24 +126,31 @@ img {
 }
 
 .body-img-mel {
-  margin: var(--margin-default);
+  margin: 0 auto;
   display: border;
   text-align: center;
-  max-width: var(--max-width-full-size);
+  max-width: 700px;
 }
 
 .img-mel {
-  max-width: var(--max-width-full-size);
+  max-width: 700px;
   height: auto;
 }
 
 .page-footer {
   clear: both;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
 }
 
 .page-footer__item {
+  -webkit-box-flex: 0;
+  -ms-flex: 0 1 20px;
   flex: 0 1 20px;
 }
 
@@ -144,13 +159,22 @@ img {
 }
 
 .social-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
   flex-direction: row;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
 }
 
 .social-container__item {
   position: relative;
+  -webkit-box-flex: 0;
+  -ms-flex: 0 1 50px;
   flex: 0 1 50px;
   text-align: center;
 }
@@ -161,7 +185,8 @@ img {
   width: 250px;
   margin-right: 40px;
   border-radius: 50%;
-  box-shadow: 2px 2px 2px 2px var(--black);
+  -webkit-box-shadow: 2px 2px 2px 2px #000;
+  box-shadow: 2px 2px 2px 2px #000;
 }
 
 .profile_logo {
@@ -171,51 +196,70 @@ img {
 
 h1 {
   font-size: 30px;
-  font-weight: var(--font-weight-headers);
+  font-weight: 700;
   line-height: 1.6;
 }
 
 h2 {
   font-size: 24px;
-  font-weight: var(--font-weight-headers);
+  font-weight: 700;
   line-height: 1.2;
 }
 
 h3 {
   font-size: 18px;
-  font-weight: var(--font-weight-headers);
+  font-weight: 700;
   line-height: 1;
 }
 
 p {
-  font-size: var(--font-size-default);
+  font-size: 16px;
   line-height: 1.4;
 }
 
 a {
-  color: var(--saddle-brown);
+  color: #8b4513;
 }
 
-a:hover,
+a:hover {
+  text-decoration: none;
+  color: #cd853f;
+}
+
 a:focus {
   text-decoration: none;
-  color: var(--peru);
+  color: #cd853f;
 }
 
 a:active {
-  color: var(--orange);
+  color: #ffa500;
 }
 
-button,
-.button {
+button {
   border: none;
   font-family: inherit;
-  background-color: var(--white);
-  color: var(--saddle-brown);
+  background-color: #fff;
+  color: #8b4513;
   text-decoration: none;
   padding: 10px;
   border-radius: 3px;
-  border-bottom: 2px solid var(--black);
+  border-bottom: 2px solid #000;
+  -webkit-transition: 0.2s opacity;
+  -o-transition: 0.2s opacity;
+  transition: 0.2s opacity;
+}
+
+.button {
+  border: none;
+  font-family: inherit;
+  background-color: #fff;
+  color: #8b4513;
+  text-decoration: none;
+  padding: 10px;
+  border-radius: 3px;
+  border-bottom: 2px solid #000;
+  -webkit-transition: 0.2s opacity;
+  -o-transition: 0.2s opacity;
   transition: 0.2s opacity;
 }
 
@@ -232,7 +276,9 @@ button:focus,
 /* Styling CSS grid */
 
 .grid {
+  display: -ms-grid;
   display: grid;
+  -ms-grid-columns: 1fr 20px 1fr 20px 1fr;
   grid-template-columns: 1fr 1fr 1fr;
   grid-gap: 20px;
 }
@@ -240,24 +286,38 @@ button:focus,
 .grid__item {
   display: inline-block;
   width: 33%;
-  background: var(--white);
+  background: #fff;
   padding: 10px;
   width: auto;
-  color: var(--black);
+  color: #000;
   opacity: 0.6;
+  text-align: center;
 }
 
 .grid__item:last-child {
+  -ms-grid-column: 3;
   grid-column: 3 / 3;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 2;
   grid-row: 1 / 3;
 }
 
 .grid__item:hover {
   border: 1px solid;
   padding: 10px;
-  box-shadow: 2px 2px var(--black);
+  -webkit-box-shadow: 2px 2px #000;
+  box-shadow: 2px 2px #000;
+  -webkit-transition-duration: 0.1s;
+  -o-transition-duration: 0.1s;
   transition-duration: 0.1s;
-  opacity: 0.8;
+  opacity: 0.9;
+}
+
+.grid__item img {
+  height: 500px;
+  width: 500px;
+  margin: auto;
+  margin-top: 20px;
 }
 
 thead {
@@ -267,14 +327,17 @@ thead {
 /* SVG file */
 
 .st2 {
+  -webkit-animation: 20s cloud-move infinite alternate linear;
   animation: 20s cloud-move infinite alternate linear;
 }
 
 .st6 {
+  -webkit-animation: 2s color-change-2 infinite alternate linear;
   animation: 2s color-change-2 infinite alternate linear;
 }
 
 .st4 {
+  -webkit-animation: 20s color-change-3 infinite alternate linear;
   animation: 20s color-change-3 infinite alternate linear;
 }
 
@@ -282,43 +345,90 @@ thead {
 
 /* Sun changing color */
 
-@keyframes color-change {
+@-webkit-keyframes color-change {
   from {
-    fill: var(--primary-color);
+    fill: #ffe4b5;
   }
   to {
-    fill: var(--secondary-color);
+    fill: #e9967a;
+  }
+}
+
+@keyframes color-change {
+  from {
+    fill: #ffe4b5;
+  }
+  to {
+    fill: #e9967a;
+  }
+}
+
+@-webkit-keyframes color-change-2 {
+  0% {
+    fill: #fff0f5;
+  }
+  50% {
+    fill: #ffb6c1;
+  }
+  100% {
+    fill: #ffa07a;
   }
 }
 
 @keyframes color-change-2 {
   0% {
-    fill: var(--lavender-blush);
+    fill: #fff0f5;
   }
   50% {
-    fill: var(--light-pink);
+    fill: #ffb6c1;
   }
   100% {
-    fill: var(--light-salmon);
+    fill: #ffa07a;
   }
 }
 
 /* Cloud moving */
 
-@keyframes cloud-move {
+@-webkit-keyframes cloud-move {
   from {
+    -webkit-transform: translate(0, 50px);
     transform: translate(0, 50px);
   }
   to {
+    -webkit-transform: translate(200px, 50px);
     transform: translate(200px, 50px);
+  }
+}
+
+@keyframes cloud-move {
+  from {
+    -webkit-transform: translate(0, 50px);
+    transform: translate(0, 50px);
+  }
+  to {
+    -webkit-transform: translate(200px, 50px);
+    transform: translate(200px, 50px);
+  }
+}
+
+@-webkit-keyframes cloud-move-reverse {
+  from {
+    -webkit-transform: translate(450, 50px);
+    transform: translate(450, 50px);
+  }
+  to {
+    -webkit-transform: translate(100px, 50px);
+    transform: translate(100px, 50px);
   }
 }
 
 @keyframes cloud-move-reverse {
   from {
+    -webkit-transform: translate(450, 50px);
     transform: translate(450, 50px);
   }
   to {
+    -webkit-transform: translate(100px, 50px);
     transform: translate(100px, 50px);
   }
 }
@@ -332,6 +442,7 @@ thead {
 
 @media all and (min-width: 500px) and (max-width: 750px) {
   .grid {
+    -ms-grid-columns: 1fr 20px 1fr;
     grid-template-columns: 1fr 1fr;
   }
 }
@@ -348,7 +459,7 @@ thead {
     font-size: 22px;
   }
   h2 {
-    font-size: var(--font-size-default);
+    font-size: 16px;
   }
   h3 {
     font-size: 12px;
@@ -367,21 +478,28 @@ thead {
 
 @media all and (max-width: 500px) {
   .grid {
+    -ms-grid-columns: 1fr;
     grid-template-columns: 1fr;
   }
   .navigation-list a {
     font-size: 18px;
   }
+  .grid__item img {
+    height: 200px;
+    width: 200px;
+  }
 }
 
 @media all and (max-width: 550px) {
   .navigation-list a {
-    font-size: var(--font-size-default);
+    font-size: 16px;
   }
   .navigation-list li {
     margin-left: 5px;
   }
   .navigation-list {
+    -webkit-box-pack: start;
+    -ms-flex-pack: start;
     justify-content: flex-start;
   }
 }
@@ -397,11 +515,23 @@ thead {
     max-width: 100%;
     height: auto;
   }
-  .profile,
-  .about-body,
-  .contact-body,
+  .profile {
+    max-width: 328px;
+    margin-left: 5px;
+    margin-right: 5px;
+  }
+  .about-body {
+    max-width: 328px;
+    margin-left: 5px;
+    margin-right: 5px;
+  }
+  .contact-body {
+    max-width: 328px;
+    margin-left: 5px;
+    margin-right: 5px;
+  }
   #contact-form-container {
-    max-width: var(--max-width-viewport-size);
+    max-width: 328px;
     margin-left: 5px;
     margin-right: 5px;
   }
