Added updated screenshots of work | Added styling to modals | Added animation on scroll for work and scroll animation | edited about section |

--- a/css/styles.css
+++ b/css/styles.css
@@ -112,23 +112,22 @@ img {
 .contact-languages {
   margin-top: 250px;
   margin-bottom: 250px;
-  border: 2px black dotted;
 }
 
 .container_profile {
   margin-top: 0px;
-  margin-bottom: 100px;
+  margin-bottom: 250px;
 }
 
 .container_languages {
-  margin-top: 50px;
-  margin-bottom: 250px;
+  margin-top: 250px;
+  margin-bottom: 0px;
   margin-left: 50px;
   margin-right: 50px;
 }
 
 .container_work {
-  margin-top: 250px;
+  margin-top: 0px;
   margin-bottom: 250px;
 }
 
@@ -138,12 +137,26 @@ img {
   text-align: center;
 }
 
-.profile,
-#about-body,
 #contact-body,
 #contact-form-container {
   max-width: var(--max-width-full-size);
   margin: var(--margin-default);
+}
+
+.profile {
+  margin-left: 200px;
+}
+
+#about-body {
+  margin-right: 150px;
+}
+
+.about-link {
+  margin-top: 200px;
+}
+
+.cta-section {
+  text-align: center;
 }
 
 .languages-body {
@@ -328,6 +341,39 @@ thead {
   line-height: 2;
 }
 
+.modal-content {
+  background-image: url(../img/marble.jpeg);
+  background-size: contain;
+}
+
+.modal-body {
+  text-align: center;
+}
+
+.img-wrapper {
+  height: 400px;
+  width: 400px;
+  margin: auto;
+}
+
+.btn-demo {
+  background-color: var(--black);
+  text-shadow: none;
+  color: var(--white);
+}
+
+.btn-demo:hover {
+  color: var(--white);
+}
+.btn-code:hover {
+  color: var(--black);
+}
+
+.btn-code {
+  background-color: var(--white);
+  color: var(--black);
+}
+
 /* End Modal styling */
 
 .tooltip {
@@ -342,6 +388,52 @@ thead {
   background-color: #000;
   border-radius: 0.25rem;
 }
+
+/* 
+Arrow styling start
+*/
+.arrow {
+  position: absolute;
+  top: 90%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.arrow span {
+  display: block;
+  width: 30px;
+  height: 30px;
+  border-bottom: 5px solid var(--black);
+  border-right: 5px solid var(--black);
+  transform: rotate(45deg);
+  margin: -10px;
+  animation: animate 2s infinite;
+}
+.arrow span:nth-child(2) {
+  animation-delay: -0.2s;
+}
+.arrow span:nth-child(3) {
+  animation-delay: -0.4s;
+}
+@keyframes animate {
+  0% {
+    opacity: 0;
+    transform: rotate(45deg) translate(-20px, -20px);
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    transform: rotate(45deg) translate(20px, 20px);
+  }
+}
+/* 
+Arrow styling end
+*/
+
+/* Animation start */
+
+/* Animation start */
 
 /* Media styling goes at the very end of CSS file */
 
